--- a/HelpdeskKit/HelpdeskKit.csproj
+++ b/HelpdeskKit/HelpdeskKit.csproj
@@ -69,7 +69,13 @@
     <Compile Include="Test.xaml.cs">
       <DependentUpon>Test.xaml</DependentUpon>
     </Compile>
-    <Page Include="HelpdeskKitView.xaml">
+    <Compile Include="ViewModels\HelpdeskKitViewModel.cs" />
+    <Compile Include="Views\MenuItem.cs" />
+    <Page Include="Views\Controls\GeneralPageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\HelpdeskKitView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -77,7 +83,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="HelpdeskKitView.xaml.cs">
+    <Compile Include="Views\Controls\GeneralPageControl.xaml.cs">
+      <DependentUpon>GeneralPageControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\HelpdeskKitView.xaml.cs">
       <DependentUpon>HelpdeskKitView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -123,9 +132,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
