--- a/HelpdeskKit/HelpdeskKit.csproj
+++ b/HelpdeskKit/HelpdeskKit.csproj
@@ -71,8 +71,8 @@
     <Compile Include="Dialogs\InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\LoginWindow.xaml.cs">
-      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    <Compile Include="Dialogs\LoginDialog.xaml.cs">
+      <DependentUpon>LoginDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helpers\StaticHelper.cs" />
     <Compile Include="Logger\ILogger.cs" />
@@ -82,14 +82,16 @@
     <Compile Include="Logger\SimpleLogger.cs" />
     <Compile Include="Models\AdUser.cs" />
     <Compile Include="OutlookHelper\OutlookWrapper.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Test.xaml.cs">
       <DependentUpon>Test.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AutomationPageControlViewModel.cs" />
-    <Compile Include="ViewModels\Commands\DelegateCommand.cs" />
+    <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="Views\Converters.cs" />
     <Compile Include="ViewModels\GeneralPageControlViewModel.cs" />
     <Compile Include="ViewModels\HelpdeskKitViewModel.cs" />
-    <Compile Include="Dialogs\LoginWindowViewModel.cs" />
+    <Compile Include="ViewModels\HelpdeskKitViewModel_Login.cs" />
     <Compile Include="Views\ContentControls\AutomationPageControl.xaml.cs">
       <DependentUpon>AutomationPageControl.xaml</DependentUpon>
     </Compile>
@@ -98,7 +100,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Dialogs\LoginWindow.xaml">
+    <Page Include="Dialogs\LoginDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -126,10 +128,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Test.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Resource\Overrides.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -195,6 +193,9 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Resource\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
