--- a/HelpdeskKit/HelpdeskKit.csproj
+++ b/HelpdeskKit/HelpdeskKit.csproj
@@ -52,9 +52,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -91,12 +88,13 @@
     </Compile>
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="ViewModels\HelpdeskKitViewModel_Operation.cs" />
+    <Compile Include="ViewModels\LoginDialogViewModel.cs" />
     <Compile Include="Views\Converters.cs" />
     <Compile Include="ViewModels\HelpdeskKitViewModel.cs" />
-    <Compile Include="ViewModels\HelpdeskKitViewModel_Login.cs" />
     <Compile Include="Views\ContentControls\AutomationPageControl.xaml.cs">
       <DependentUpon>AutomationPageControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ICloseable.cs" />
     <Compile Include="Views\MenuItem.cs" />
     <Page Include="Dialogs\InputDialog.xaml">
       <SubType>Designer</SubType>
